Fixing issue with overflow text

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -20,13 +20,14 @@ section {
   margin-right: auto;
   margin-left: auto;
   position: relative;
+  overflow: auto;
 }
 
 .content-title {
   text-align: center;
   font-family: "Comic Sans MS", cursive, sans-serif;
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
   position: absolute;
   top: -20px;
   right: 0;
@@ -48,7 +49,7 @@ section {
   font-family: Arial, Helvetica, sans-serif;
   position: absolute;
   top: 30px;
-  padding: 10px;
+  padding: 0px 10px 0px 10px;
 }
 
 /* Desktop */
